[tool.poetry]
name = "YOSPython"
version = "0.3.0beta"
description = "Proudly open-source on GitHub at: https://github.com/yiffery/YOS-Python/"
authors = ["Yifei Wang <yifeiw8@icloud.com>", "YHStudios <mailyhstudios@gmail.com>"]
readme = "README.md"
packages = [{include = "repl_nix_yos_python"}]

[tool.poetry.dependencies]
python = "^3.10"
replit = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
